exports[`sync-basic error snapshots > should capture NaN assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 42,
  "expected": [],
  "operator": "\\"{unknown} 'to be NaN'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture array assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be an array' / 'to be array'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture async function assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "expected": [],
  "operator": "\\"{unknown} 'to be an async function'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture bigint assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 42,
  "expected": [],
  "operator": "\\"{unknown} 'to be a bigint' / 'to be a BigInt'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture boolean assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a boolean' / 'to be boolean' / 'to be a bool'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture class assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a class' / 'to be a constructor' / 'to be constructible'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture date assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a date' / 'to be a Date'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture defined assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "expected": [],
  "operator": "\\"{unknown} 'to be defined'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture empty array assertion error 1`] = `
{}
`;

exports[`sync-basic error snapshots > should capture empty object assertion error 1`] = `
{}
`;

exports[`sync-basic error snapshots > should capture empty string assertion error 1`] = `
{}
`;

exports[`sync-basic error snapshots > should capture error assertion error 1`] = `
{}
`;

exports[`sync-basic error snapshots > should capture false assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": true,
  "expected": [],
  "operator": "\\"{unknown} 'to be false'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture falsy assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 1,
  "expected": [],
  "operator": "\\"{unknown} 'to be falsy'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture function assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a function'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture infinite assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 42,
  "expected": [],
  "operator": "\\"{unknown} 'to be infinite'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture integer assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 3.14,
  "expected": [],
  "operator": "\\"{unknown} 'to be an integer' / 'to be a safe integer' / 'to be an int' / 'to be a safe int'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture negative assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 5,
  "expected": [],
  "operator": "\\"{unknown} 'to be negative' / 'to be a negative number'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture negative infinity assertion error 1`] = `
{}
`;

exports[`sync-basic error snapshots > should capture negative integer assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 5,
  "expected": [],
  "operator": "\\"{unknown} 'to be a negative integer' / 'to be a negative int'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture non empty string assertion error 1`] = `
{}
`;

exports[`sync-basic error snapshots > should capture null assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "expected": [],
  "operator": "\\"{unknown} 'to be null'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture number assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a number' / 'to be finite'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture object assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be an object'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture positive assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": -5,
  "expected": [],
  "operator": "\\"{unknown} 'to be positive' / 'to be a positive number'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture positive infinity assertion error 1`] = `
{}
`;

exports[`sync-basic error snapshots > should capture positive integer assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": -5,
  "expected": [],
  "operator": "\\"{unknown} 'to be a positive integer' / 'to be a positive int'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture primitive assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {},
  "expected": [],
  "operator": "\\"{unknown} 'to be a primitive'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture record assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [],
  "expected": [],
  "operator": "\\"{unknown} 'to be a record' / 'to be a plain object'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture regexp assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a RegExp' / 'to be a regex' / 'to be a regexp'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture set assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a Set'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture string assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 42,
  "expected": [],
  "operator": "\\"{unknown} 'to be a string'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture symbol assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a symbol' / 'to be a Symbol'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture true assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": false,
  "expected": [],
  "operator": "\\"{unknown} 'to be true'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture truthy assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 0,
  "expected": [],
  "operator": "\\"{unknown} 'to be truthy' / 'to exist' / 'to be ok'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture undefined assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": null,
  "expected": [],
  "operator": "\\"{unknown} 'to be undefined'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture weak map assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a WeakMap'\\"",
  "diff": "simple"
}
`;

exports[`sync-basic error snapshots > should capture weak set assertion error 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": [],
  "operator": "\\"{unknown} 'to be a WeakSet'\\"",
  "diff": "simple"
}
`;
